<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.CarDataActivity">

    <androidx.appcompat.widget.Toolbar
            app:title="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:background="@color/toolbarPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_marginBottom="4dp" />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="?attr/actionBarSize">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_first_start_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_first_start_create"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="4dp" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_first_start_drive_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_first_start_drive_import"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="4dp" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_first_start_file_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_first_start_file_import"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="4dp" />

    </LinearLayout>

</LinearLayout>