<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.CarDataActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_bar_margin_bottom">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/car_profile_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/app_name"
                app:titleCentered="true"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="?attr/actionBarSize">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_first_start_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.App.TextButton"
                android:text="@string/activity_first_start_create"
                android:layout_marginHorizontal="@dimen/welcome_button_margin_horizontal" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_first_start_drive_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.App.TextButton"
                android:text="@string/activity_first_start_drive_import"
                android:layout_marginHorizontal="@dimen/welcome_button_margin_horizontal" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_first_start_file_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.App.TextButton"
                android:text="@string/activity_first_start_file_import"
                android:layout_marginHorizontal="@dimen/welcome_button_margin_horizontal" />

    </LinearLayout>

</LinearLayout>
