<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.CarDataActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_bar_margin_bottom">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/car_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.App.TextInputLayout"
            android:layout_marginVertical="@dimen/text_input_margin_vertical"
            android:layout_marginHorizontal="@dimen/text_input_margin_horizontal">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/car_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_car_name_hint"
                android:drawableStart="@drawable/format_color_text_accent"
                android:inputType="textCapSentences"
                android:drawablePadding="@dimen/edit_text_drawable_padding" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.App.TextInputLayout.ExposedDropdownMenu"
            android:layout_marginVertical="@dimen/text_input_margin_vertical"
            android:layout_marginHorizontal="@dimen/text_input_margin_horizontal">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/car_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_car_body_hint"
                android:drawableStart="@drawable/car_side"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:cursorVisible="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.App.TextInputLayout.ExposedDropdownMenu"
            android:layout_marginVertical="@dimen/text_input_margin_vertical"
            android:layout_marginHorizontal="@dimen/text_input_margin_horizontal">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/car_fuel_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_car_fuel_hint"
                android:drawableStart="@drawable/water"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:cursorVisible="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/car_engine_layout"
            style="@style/Theme.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_input_margin_vertical"
            android:layout_marginHorizontal="@dimen/text_input_margin_horizontal"
            android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/car_engine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/engine"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:hint="@string/activity_car_engine_hint"
                android:inputType="numberDecimal"
                android:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
